# agt

./: .gitmodules  CMakeLists.txt  README.md
include/agt/: event.hpp  utils.hpp
include/agt/backend/: backend.hpp  wl-input.hpp  wl.hpp  x11.hpp
include/agt/gl/: gl.hpp  rendering.hpp  shaders.hpp  window.hpp
include/agt/gl/shaders/: frag.glsl  vert.glsl
include/agt/gl/shaders/shapes/: frag.glsl  vert.glsl
include/agt/input/: input.hpp
include/agt/ui/: draw.hpp  text.hpp  ui.hpp
include/agt/ui/widgets/: button.hpp  hbox.hpp  label.hpp  rect.hpp
include/agt/wayland/: display.hpp  input.hpp  window.hpp
src/: event.cpp
src/gl/: gl.cpp  rendering.cpp  shaders.cpp  window.cpp
src/ui/: draw.cpp  text.cpp  ui.cpp
src/ui/widgets/: button.cpp  hbox.cpp  label.cpp
src/wayland/: display.cpp  input.cpp  window.cpp
src/wl/: input.cpp  window.cpp  wl.cpp
src/x11/: x11.cpp
tests/: main.cpp
